tests/try-catch.out
Error: Something happened
	at try-catch.b:3:3 -> @.script()